# kosar

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.old  run.py
app/: __init__.py  config.py  extensions.py
app/blueprints/account/: __init__.py  routes.py
app/blueprints/account/templates/account/: account_list.html  account_manage.html  base.html  confirm_user_update.html  dashboard.html  login.html  test_nav.html  user_inactivate_confirm.html  user_list.html  user_manage.html
app/blueprints/main/: routes.py
static/css/: styles.css
static/js/: main.js
