[tool.poetry]
name = "kosar"
version = "1.0.0"
description = "A cloud-based tax/ERP solution."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://example.com"
repository = "https://github.com/jaywar75/kosar"
keywords = ["tax", "cloud", "erp", "automation"]
# If you only want to manage dependencies (not publish this project),
# you can disable package mode. Remove or comment out if undesired.
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

# Production dependencies (matching your old requirements):
blinker = "1.9.0"
click = "8.1.8"
dnspython = "2.7.0"
Flask = "3.1.0"
Flask-PyMongo = "2.3.0"
itsdangerous = "2.2.0"
Jinja2 = "3.1.5"
MarkupSafe = "3.0.2"
pymongo = "4.10.1"
python-dotenv = "1.0.1"
Werkzeug = "3.1.3"

# Dev/test dependencies in the "dev" group
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"